# ArcadiaAI

./: .env.example  .gitignore  Cargo.toml  README.md  chats.html  error.txt  index.html  requirements.txt  setup.py  style.css
data/: scrape_results.json
src/: app.py  main.rs
src/helpers/: localllm.py  scraper.py
src/lib/: DataCollector.py  GemInterface.py  GemInterface.rs  SessionManager.py  mod.rs  qrCodeGen.py
src/static/styles/: style.css
src/templates/: chats.html  home.html  index.html
