[package]
name = "ArchieAI"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"

# Replace gemini-2_5-client with gemini-rust or gemini-client-api
gemini-rust = "1.5" # Check crates.io for the latest version
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3" # Required to call the async gemini-rust client synchronously
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"